--- a/About-me.html
+++ b/About-me.html
@@ -36,7 +36,7 @@
     <main class="about">
       <section class="about-me-bio">
         <div class="about-me-img">
-          <img src="images/Profile-pic.jpg" alt="profile picture">
+          <img src="./images/Profile-pic.jpg" alt="profile picture">
         </div>
         <div>
           <h2>Hailemichael Molla</h2>
